tests/ui/err/has-too-many-arguments.rs
#[logfn::logfn("info", "error")]
fn f() {}

fn main() {}
